# gee-agent

./: .gitignore  README.md  debug_rag_validation.ipynb  main.py  prd.md  pyproject.toml  refactor_todolist.md  requirements.txt  scraper.py  test_exec.py
backend/app/: __init__.py  main.py
backend/app/agents/: agent_gee_assistant.py  orchestrator.py  prompts.py  router.py  session_store.py  state.py  (+3 more)
configs/: gee_tasks.yaml  models.yaml  settings.example.yaml
data/chroma/: chroma.sqlite3
frontend/: app.py
frontend/components/: chat_ui.py  map_view.py  sidebar.py
frontend/pages/: 0_Setup.py  1_Chat_Assistant.py  2_Code_Editor.py  2_Map_Explorer.py
frontend/services/: api_client.py
gee_rag_data/: 02_landsat8_ndwi_water_mask_summary.txt  04_srtm_elevation_slope_stats.txt  06_dynamic_world_landcover_proportions.txt  08_jrc_surface_water_occurrence_area.txt  10_modis_ndvi_time_series_summary.txt  11_hansen_forest_loss_area_by_year.txt  12_viirs_nightlights_change_summary.txt  16_modis_gpp_annual_productivity_summary.txt  17_sentinel1_flood_inundation_change_detection.txt  18_landsat_uhi_intensity_summary.txt  19_ndvi_time_series_breakpoint_detection.txt  dataset_ids_common.txt  few_shot_cases_leah.txt  few_shot_sentinel2_cloudless_mosaic.txt  few_shot_sentinel2_ndvi.txt  few_shot_spectral_indices.txt  few_shot_validation_error_matrix.txt  gee_api_docs.json  gee_api_docs_for_rag.txt  gee_datasets_catalog.txt
scripts/: build_chroma_index.py  fetch_osm_boundary.py  generate_dataset_cards_from_stac.py  test_gee_connection.py  test_geocoding.py  verify_apis.py
(+34 files in other folders)
